Working on different stuff

--- a/WebDevUdemy/HTMLNOTE.html
+++ b/WebDevUdemy/HTMLNOTE.html
@@ -18,9 +18,31 @@
 <html lang="en"> <!-- This is what wraps your whole html body -->
 <head> <!-- This area houses important info about the website that is not displayed to the user -->
 <meta charset="UTF-8"> <!-- This is the character set that is used to display the text on the page -->
+<meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- This is the compatibility mode for the page -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- This is the viewport for the page -->
 <title>HTML Boiler Plate</title> <!-- This is the title of the page that is displayed in the tab -->
 </head> <!-- This is the end of the head tag -->
 <body> <!-- This is the body of the page that is displayed to the user -->
     <h1>Hello World!</h1>
 </body> <!-- This is the end of the body tag -->
 </html> <!-- This is the end of the html tag -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kyle</title>
+</head>
+<body>
+    <p><em><strong>Bun</strong></em></p> <!-- This is a paragraph tag that is bold(strong tag) and italic(em is emphasize tag) -->
+    <h2>cheese</h2>
+    <h3>lettuce</h3>
+    <h4>tomato</h4>
+    <h5>onion</h5>
+    <h6>mayo</h6>
+    <h1>Patty</h1>
+    <h1>Bun</h1>
+</body>
+</html>
