Forgot to push in a while

--- a/WebDevUdemy/HTMLNOTE.html
+++ b/WebDevUdemy/HTMLNOTE.html
@@ -46,3 +46,60 @@
     <h1>Bun</h1>
 </body>
 </html>
+<!-- <ul> Unordered list that is nested creating black dots and hollow dots.
+        <li>Kyle
+            <ul>
+                <li>Lame</li>
+                <li>Bad</li>
+                <li>Weak</li>
+            </ul>
+        </li>
+        <li>Morgan
+            <ul>
+                <li>Strong</li>
+                <li>Cool</li>
+                <li>Handsome</li>
+            </ul>
+        </li>
+        <li>App Academy</li>
+    </ul>
+
+
+<link rel="stylesheet" href="morgan.css"> put this in the head to add css doc
+
+
+
+
+-->
+<!-- Below is how to do a table -->
+<table>
+    <thead>
+        <tr>
+            <th>Years</th>
+            <th>Company</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>2010-2013</td>
+            <td>Developer at Crosshair Customs</td>
+        </tr>
+        <tr>
+            <td>2013-2015</td>
+            <td>Developer at Crosshair Customs</td>
+        </tr>
+    </tbody>
+    <tfoot>
+
+    </tfoot>
+</table>
+<table cellspacing="20"> <!-- This is the spacing between the cells -->
+    <tr> <!-- This is the table row tag -->
+        <td><img src="Gustavo_Fring_BCS_S3E10.png" alt="Gustavo Fring" width="200" height="300"></td> <!-- This is the image tag -->
+        <td> <!-- This is the table data tag -->
+            <h1>Morgan Gravelat</h1> <!-- This is the heading tag -->
+            <p><em><strong>BATTLE</strong></em></p> <!-- This is a paragraph tag that is bold(strong tag) and italic(em is emphasize tag) -->
+            <p>Morgan is a king and Kyle a Koward</p> <!-- This is a paragraph tag -->
+        </td>
+    </tr>
+</table>
